# lush

./: .bazelrc  .gitignore  Makefile  README.md  build.zig  build.zig.zon  bun.lockb
.github/workflows/: build.yml  publish.yml
app/: index.html  server.lua  styles.gen.css
modules/cli/: BUILD.bazel  build.zig  build.zig.zon  package.json
modules/cli/package/: jsr.json  package.json
modules/cli/scripts/: build-frontend.ts  index.ts  process-config.ts
modules/cli/src/: main.zig  template.zig
modules/cli/src/frontend/: build-frontend.ts  postcss-plugin.ts  tailwind-plugin.ts
modules/cli/src/template/: bundler.config.ts  package.json
modules/cli/template/: bundler.config.ts  package.json
modules/core/: .gitignore  BUILD.bazel  README.md  build.zig  build.zig.zon
modules/core/include/: chalk-ext.h
modules/core/package/: jsr.json  package.json
modules/core/scripts/: build-once.ts  child.ts  index.ts
modules/core/scripts/bundler/: bundler.ts  config.ts  lua-plugin.ts
modules/core/src/: lon.zig  main.zig  template.zig
modules/core/src/template/: package.json
modules/plugin-postcss/: BUILD.bazel  README.md  jsr.json  package.json
modules/plugin-postcss/src/: index.ts
modules/server/: BUILD.bazel  README.md  build.zig  build.zig.zon  tailwind.config.js
modules/server/app/: index.html  server.lua
modules/server/src/: root.zig  test.zig
modules/server/src/server/: lua.zig  server.zig
src/: main.zig
src/server/: lua.zig  lua_lib.zig  server.zig  templating.zig
test/: Makefile  package.json
test/app/: index.html
(+6 files in other folders)
