genrule(
    name = "build",
    srcs = glob(["src/**/*.zig", "src/**/*.ts", "build.zig.zon", "build.zig"]),
    outs = ["lush"],
    cmd = """
        WORKSPACE_ROOT=$$(pwd) && \
        cd $$(dirname $(location build.zig)) && \
        export ZIG_GLOBAL_CACHE_DIR=$$(mktemp -d) && \
        export ZIG_LOCAL_CACHE_DIR=$$(mktemp -d) && \
        zig build install && \
        chmod +x zig-out/bin/lush && \
        cp zig-out/bin/lush $$WORKSPACE_ROOT/$@
    """
)

